# bingoset

./: .gitignore  README.md  pyproject.toml
bingoset/: main.py  search_bing_api.py
bingoset.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bingoset/utilities/: checks.py  config.py
tests/: test_bingoset.py
